
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int parent; } ;
struct platform_device {TYPE_1__ dev; } ;
struct asic3 {int * clocks; } ;


 size_t ASIC3_CLOCK_EX0 ;
 size_t ASIC3_CLOCK_EX1 ;
 size_t ASIC3_CLOCK_OWM ;
 int ASIC3_EXTCF_OWM_EN ;
 int ASIC3_OFFSET (int ,int ) ;
 int EXTCF ;
 int SELECT ;
 int asic3_clk_disable (struct asic3*,int *) ;
 int asic3_set_register (struct asic3*,int ,int ,int ) ;
 struct asic3* dev_get_drvdata (int ) ;

__attribute__((used)) static int ds1wm_disable(struct platform_device *pdev)
{
 struct asic3 *asic = dev_get_drvdata(pdev->dev.parent);

 asic3_set_register(asic, ASIC3_OFFSET(EXTCF, SELECT),
      ASIC3_EXTCF_OWM_EN, 0);

 asic3_clk_disable(asic, &asic->clocks[ASIC3_CLOCK_OWM]);
 asic3_clk_disable(asic, &asic->clocks[ASIC3_CLOCK_EX0]);
 asic3_clk_disable(asic, &asic->clocks[ASIC3_CLOCK_EX1]);

 return 0;
}
